--- a/style.css
+++ b/style.css
@@ -20,27 +20,20 @@
   padding:0;
 }
 
-body {
-  max-width: 1280px;
-  margin:0 auto;
-}
-
 .navbar {
-  max-width: 1280px;
-  width: 100%;
   display:flex;
   justify-content: center;
   align-items: center;
   padding:16px;
   border-bottom: 1px solid var(--primary-black);
   background-color: var(--primary-white);
+  position:sticky;
+  top:0;
 }
 @media (min-width:920px) {
   .navbar{
     justify-content: space-between;
     padding:32px;
-    position:fixed;
-    z-index: 2;
   }
 }
 
@@ -99,7 +92,7 @@ button {
 
 @media (min-width:920px) {
   .main-content{
-    padding:124px 32px 64px;
+    padding:64px 32px;
   }
 }
 
@@ -112,7 +105,7 @@ button {
 }
 
 .container__cards{
-  max-width: 1280px;
+  max-width: var(--viewport-width);
   width: 100%;
   display:grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -123,6 +116,7 @@ button {
 @media (min-width:768px) {
   .container__cards{
     padding:0 64px;
+    margin:0 auto;
   }
 }
 
